Initial HTML structure with header, paragraph, and image

--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hello world
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Gundam Plastic Models</title>
+</head>
+<body>
+	<h1>What are gundam plastic models?</h1>
+		<p>Also known as <b>Gunpla</b>, Gundam plastic models are plastic model kits depicting the vehicles and the robots from the long time running Japanese anime series <em>Gundam</em>.</p>
+		<img src="http://76.my/Malaysia/mg-1-100-zgmf-x20a-strike-freedom-gundam-plastic-model-jarone-1403-25-jarone@3.jpg" alt="http://www.lelong.com.my/">
+</body>
+</html>
