Add styles.css and verify link

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Gundam Plastic Models</title>
+	<link rel="stylesheet" href="styles.css" type="text/css">
 </head>
 <body>
 	<h1>What are Gundam plastic models?</h1>
