--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Contacts</title>
+	<link rel="stylesheet" href="styles.css" type="text/css">
 </head>
 <body>
 	<a href="https://devbootcamp.com">Link</a>
